# Evolutionary_robotics

./: .gitignore  README.md
agent_interface/: CMakeLists.txt  package.xml
agent_interface/action/: Setpoint.action
agent_interface/msg/: CNNConfig.msg  PConfig.msg  Stats.msg
agent_interface/srv/: SetConfig.srv
goal_interface/: CMakeLists.txt  package.xml
single_agent_waypoint_following/: CMakeLists.txt  CMakeLists_old.txt  package.xml
single_agent_waypoint_following/include/single_agent_waypoint_following/: CNN.hpp  CNN_controller.hpp  CNN_genome.hpp  PID_controller.hpp  P_genome.hpp  controller.hpp  evolver.hpp  genome.hpp  simulation.hpp  utils.hpp
single_agent_waypoint_following/launch/: simulation.launch.old.py  simulation.launch.py
single_agent_waypoint_following/src/: CNN.cpp  CNN_controller.cpp  PID_controller.cpp  controller.cpp  evolver.cpp  genome.cpp  main.cpp  main_controller.cpp  main_sim.cpp  nn.cpp  population.cpp  simulation.cpp
